--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AndrewShamrey"
+    "url": "https://github.com/rolling-scopes-school/andrewshamrey-ST2021Q1/tree/things-v1"
   },
   "author": "Andrew Shamrey",
   "license": "ISC",
